--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
